mod: fix cate_id not work in post list api
