# server_go/controller/req/post_req.go
@@ -1,19 +1,19 @@
 package req
 
 type GetPostListReq struct {
-	CateId uint64 `form:"cate_id" binging:"omitempty,min=1"`
-	Page   int    `form:"page" binging:"omitempty,min=1,default=1"`
-	Limit  int    `form:"limit" binging:"omitempty,min=1,default=10"`
+	CateId uint64 `form:"cate_id" binding:"omitempty,gte=1"` // 分类id
+	Page   int    `form:"page" binding:"omitempty,gte=1"`
+	Limit  int    `form:"limit" binding:"omitempty,gte=1"`
 }
 
 type GetPostDetailReq struct {
-	PostId      uint64 `form:"post_id" binding:"required"`
-	ContentType string `form:"ct" binding:"omitempty,oneof=html md"`
+	PostId      uint64 `form:"post_id" binding:"required"`           // 文章id
+	ContentType string `form:"ct" binding:"omitempty,oneof=html md"` // 文章内容类型，html或者markdown
 }
 
 type GetPostArchiveReq struct {
 }
 
 type GetPostAboutReq struct {
-	ContentType string `form:"content_type" binding:"omitempty,oneof=html md"`
+	ContentType string `form:"ct" binding:"omitempty,oneof=html md"`
 }
